# opnorm-grad

./: README.md  environment.yml  pyproject.toml
notebooks/: integration_demo.ipynb
src/opnorm_grad/: __init__.py  layers.py
tests/: test_layers.py
